<resources>
    <string name="action_abm_locator">ABM Locator</string>
    <string name="action_about">About</string>
    <string name="action_feedback">Feedback</string>
    <string name="action_sign_out">Sign out</string>
    <string name="app_name">BioTracker</string>
    <string name="button_sign_in">SIGN IN</string>
    <string name="button_submit">SUBMIT</string>
    <string name="content_description_logo">Logo</string>
    <string name="hint_subject">Subject</string>
    <string name="hint_feedback">Feedback</string>
    <string name="text_field_username">Username</string>
    <string name="text_field_password">Password</string>
    <string name="text_view_about">BioTracker collects your key/touch/swipe/device data continuously to take action on attackers in real-time.</string>
    <string name="text_view_account_type">Chequing</string>
    <string name="text_view_bank_accounts">Bank Accounts</string>
    <string name="text_view_transactions">Transactions</string>
    <string name="title_about">About</string>
    <string name="title_activity_maps">ABM Locator</string>
    <string name="title_feedback">Feedback</string>
</resources>

