<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- ABM Locator, should appear as action button if possible -->
    <item
        android:id="@+id/action_abm_locator"
        android:icon="@drawable/ic_my_location_24dp"
        android:title="@string/action_abm_locator"
        app:showAsAction="ifRoom"/>

    <!-- About, should appear as action button if possible -->
    <item
        android:id="@+id/action_about"
        android:icon="@drawable/ic_action_about"
        android:title="@string/action_about"
        app:showAsAction="ifRoom"/>

    <!-- Feedback, should always be in the overflow -->
    <item android:id="@+id/action_feedback"
        android:title="@string/action_feedback"
        app:showAsAction="never"/>

    <!-- Sign out, should always be in the overflow -->
    <item android:id="@+id/action_sign_out"
        android:title="@string/action_sign_out"
        app:showAsAction="never"/>

</menu>