<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2f3446">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageViewLogoAbout"
        android:background="@drawable/ic_plurilock_logo"
        android:contentDescription="@string/content_description_logo"
        android:layout_marginTop="60dp"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:id="@+id/textViewAppNameAbout"
        android:textSize="22sp"
        android:layout_marginTop="10dp"
        android:textColor="#f60000"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_view_about"
        android:id="@+id/textViewAbout"
        android:layout_marginLeft="60dp"
        android:textSize="22sp"
        android:layout_marginRight="60dp"
        android:lineSpacingExtra="10dp"
        android:layout_marginTop="60dp"
        android:textColor="#bfbfc0" />

</LinearLayout>