<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTextSubject"
        android:layout_gravity="center_horizontal"
        android:hint="@string/hint_subject"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:paddingBottom="20dp"
        android:textColorHint="#bfbfc0" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTextFeedback"
        android:hint="@string/hint_feedback"
        android:gravity="top"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:paddingBottom="20dp"
        android:textColorHint="#bfbfc0"
        android:minLines="10" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_submit"
        android:id="@+id/buttonSubmit"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:background="#f60000"
        android:textSize="16sp"
        android:nestedScrollingEnabled="false"
        android:onClick="submit" />
</LinearLayout>